# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xwAdtYQWUqjgXrBtLtqNrtj6jQajcSpcvAZbFrSAKkmU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1LMApYeEBdxkQRzGKfDsm0L2yV5PVJeOJzZv3o2LQOjo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1o42mEe6LDQj-PBhmHCwOdM1Qfdb6LDS-qRoI5pRMJbQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xMh8e0XQbctaben66JJxuGnPi7ZcoEZ6UC-Vxdjk3BZ0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1TG3NC4UM08VgpGSenjVZIL-FFIjL1y-R5DhOeoi55X0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1z6h9Jhghr0Gov7ldUPnwKp3KTwZIaZc5AmA3D4-lPnI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1yx4TpoOVcetzEHBqlf2V_ySyBAfOnqMd_2Okf4Xi0AU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT24i53Y_LSFgOzB9sDPGjQGThrZo3hFH0nKlhQjY7_7Xo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2AGUSydOLlSW-QpdVW6_l88JgoH9J_L5PaNAuMr5B3PQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2H4XR7PFMiLXg14CMUPWthg6iVl1DssPpPjw0mBOrWXs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2TFVW0ZJ_iVtJ4bW8RCR5g8LCE5jbW-sSnzFXwFLl03c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2ThmvE5k1prsDoB3vCW95ULKJfhr4itCwuU9YU95FF7U=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT10qLbIPFj521VmphAr_ABWov6_t_NfHJOjsASOE6WyLs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT11KU2JctRnNMBU88dJGCN_RPOHM4EBfuhGk5LLAUiPpk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT145WRf49nA1MqvaI0JDPg5OhHqTMCQOfV8O9G_A8xTcA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1NqpWdfPkT8Zdwma94LncAPJ9Itz9Unb9Au7aJRq0c5I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1TZfJtgG1E0VsX0BHA_XunVcxHuDBrAbxzueilV1fqGg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1mHINYmfrGnjC6BmJX5AwkaBGc_a7zn7TfK-L8bLNxKQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1osnqWm6bfBmbpCU6ctZlJ2p4pbR0saQ3yR-mcIr3hmM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x645IOegC5osH5beI8STcJA2HhxPLbc3LGI8uNV6Q1j8Nw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x646rSkX5E_1b0qwkFG-iXnNEixph3rlhNtHYnoVGNU4EQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x17LD0QJxi8zZV6dc-w1cZUNgSLbJkn0HZ6gIN8zIdre4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1AckpWHsCo7XlN9733l_tftYKIUO0JG8woa5mxHqTdu8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1Dw4SRGDufbz7Do1jCccOz4XrjULqyIIrAz5o6yVIo1A=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2JAv7dWb6NZfFzC2fc7xVRfXtNdNFlc1WHwSQaNf_iiU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Zd-ZBHzqY4BG4DQrq30OpFGU4FVOu1o-jeeVDlGqcgQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3L-TqCWdxF1w5yZmlNOPEuoL9Hii4EaMf6_wQBcrI9nE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI324U0ncfK8GVBNOftbfM1YpL4toRwSi_se6SOf3E6ZNqA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32N8GrCvk0TR7mmlbFz0-P18fZkycCmq2O0wZ7-eCbIWM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32pPQhMhe7ddiPGUiTZuF2Quhb1nib5ZQXthFe00Jj1nE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32ZWBKXS0OLU_Agzjz6IX-4j6ELNkG6N509hqo6ogA6vs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xJNSDniEPOjGcMN_m_Pnj1PuFApe1WVfh2Tcr2D0QA18=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xpSWw4VCBWhMK8fXVogpAEJ9l5v2Sl5wWWiC-bX6rdHE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT13aqCQ9Bvcq4zIZBSEZyx5VNPZ7JMSx4gCRvrIJJBS98=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT17CIFoQIHXCyVOHfDRUEE3iCRhKi_gffFIVFezEM5g-8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT19j7RhvmH-91oAq3EV54lt-Ff9tY7M1IW_XB6OeMDEIA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1AprcDQ0jxgcAx-NIulTcZJbNaPEZphajiES9cRGYAUs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1BpZEJDSCa1AreNuDaYOeZ3KD9fZcIYcy3jryH9u-l9c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1H4G5TZhAj7JbSGCdI8O78Brn8GAy34o6iTBT5ZsBpmM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT16X7zEPRZMCbUjR1RgvHLUDNeF9Q6b0sRnKLM6AYYbJc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1NCaOTpPvrGy4kJjAgz-SGK0X35lwbtPCqB73ezHa9CM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT33-XvK4PpUYUA-8j-rftSqwV6JAv0yNhXKz5E4BF-UBU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3KubVhIYO_biKTfzb4xhCR_sDPWv_qLyJeyyZDQOs_rI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4OYiQYkPZWh5Xx7dGmK79SBWSsxyUQ2yCmLoPdodLbKo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4ofZN61nr_2ZoYg1O1uPLuuOnmRCcZMBxKCx-HyfVCmk=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16BrrCjvPfKg9660yB-PHBk-cO-HXNmLmbeWsdQrCLwnY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16w1zcpudFGJ_1Ckpoif4PbXypr-kOiPy6Ydu4GzTEiMk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16lFYG2BdYwwAO9YRMZTF9xZkVmoYRunRfklrkVY6yH7A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16ob3XO15L3ejJ_N_uF1GwyR6ZYIxPRTwrdcucCQxRPew=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16hnnrn5MzutRXIFWXmBJRUI7Qc2_-42IHawMZdmtdEfI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16708UrMUcQiZVD1ngGbBjGSj8mPyc7TIw_oz-RiOLTZk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16MAv5r2IbYUyHnI3XjPahcm4qvZhLh8a_CFS7ds-_fGc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x162V2WfqwYUW0BBSeAEUvQBfQSKKSLi_GJOovJmy9K2eI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16Q2HTlDYwCkPP4ttFGcJdaMDUBmIP4J0mYTlEgDjjnA4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16zmXL5dIzLic8uKgpZM4rTothKEbNTxkUo-tIh0Pj2os=',
      'err': 0,
    }),
  ])
# ---
